--- a/bluchat/Podfile
+++ b/bluchat/Podfile
@@ -8,5 +8,6 @@ target 'bluchat' do
   # Pods for bluchat
   pod 'syncano-ios'
   pod 'JSQMessagesViewController'
+  pod 'IQKeyboardManagerSwift'
 
 end
